# polenta

./: .gitattributes  Cargo.toml  DESIGN.md  LICENSE  README.md  TODO.md  calc.pest  polenta.pest
.github/workflows/: tests.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
examples/: errors.rs  simple.rs
polenta/: polenta.pest
polenta/src/: lib.rs
polenta/tests/: errors.rs  statements.rs
program/: Cargo.toml  README.md
program/examples/: errors.rs
program/src/: errors.rs
src/: errors.rs  grammar.rs  lib.rs  main.rs  program.rs  utils.rs
src/grammar/: arith.rs  mod.rs
src/lang/: grammar.pest
tests/: assert.rs  errors.rs  polynomials.rs  simple.rs  statements.rs
tests/common/: mod.rs
tui/: Cargo.toml
