[package]
name = "polenta"
version = "0.1.0"
edition = "2021"
authors = ["erhant"]
license = "MIT"

[features]
repl = ["colored", "rustyline"]

[dependencies]
lambdaworks-math = { version = "0.7.0" }
lazy_static = "1.5.0"
miette = { version = "7.2.0", features = ["fancy"] }
pest = { version = "2.7.12" }
pest_derive = "2.7.10"
supports-color = "3.0.0"
thiserror = "1.0.62"

# repl dependencies
colored = { version = "2.1.0", optional = true }
rustyline = { version = "14.0.0", optional = true }

[[bin]]
name = "repl"
path = "src/bin/repl.rs"
required-features = ["repl"]
