[package]
name = "polenta"
version.workspace = true
edition.workspace = true

[dependencies]
lambdaworks-math.workspace = true
lazy_static = "1.5.0"
miette = { version = "7.2.0", features = ["fancy"] }
pest = { version = "2.7.12" }
pest_derive = "2.7.10"
supports-color = "3.0.0"
thiserror = "1.0.62"
